--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -32,6 +32,8 @@ add_library( # Specifies the name of the library.
              src/main/jni/eacpay-core/BRArray.h
              src/main/jni/eacpay-core/BRBase58.c
              src/main/jni/eacpay-core/BRBase58.h
+             src/main/jni/eacpay-core/BRBech32.c
+             src/main/jni/eacpay-core/BRBech32.h
              src/main/jni/eacpay-core/BRBIP32Sequence.c
              src/main/jni/eacpay-core/BRBIP32Sequence.h
              src/main/jni/eacpay-core/BRBIP38Key.c
