move submodule to latest commit in master

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = app/src/main/secp/secp256k1
 	url = https://github.com/bitcoin-core/secp256k1.git
 	branch = master
+[submodule "app/src/main/jni/eacpay-core"]
+	path = app/src/main/jni/eacpay-core
+	url = https://github.com/Sandokaaan/eacpay-core
+	branch = master
